# medimeet

./: .env  CustomJWTAuthentication.py  README.md  db.sqlite3  deploy.sh  finance-bddy-keypair.pem  finance-bddy-keypair.pub  id_rsa_skji72  id_rsa_skji72.pub  pyproject.toml  pytest.ini
authentication/: admin.py  models.py  serializers.py  views.py
authentication/di/: injector_config.py
authentication/migrations/: 0001_initial.py  0002_alter_user_gender.py  0002_user_is_active_user_is_staff_user_is_superuser.py  0003_alter_user_mobile_number.py  0004_alter_user_gender_alter_user_mobile_number.py
authentication/services/jwt_service/: jwt_service.py
authentication/services/otp/: otp_service_interface.py  send_otp_service.py  sms_otp_service.py
authentication/services/register_user/: register_user_service.py
authentication/services/user_service/: user_service.py
authentication/services/verify_otp/: otp_verification_service.py  verify_user_service_interface.py
authentication/utils/validators/: mobilenumber_validator.py
clinic_management/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
clinic_management/migrations/: 0001_initial.py  0002_alter_appointment_status.py  0002_remove_doctor_available_slots_alter_doctor_gender_and_more.py
core/: base_response_serializer.py  create_response.py  logging_config.py  redis_client.py  redis_client_interfaces.py  redis_service.py  request_client.py
core/di/: injector_config.py
medimeet/: asgi.py  settings.py  urls.py  wsgi.py
